--- a/stylesheets/scss/components/_colors-create.scss
+++ b/stylesheets/scss/components/_colors-create.scss
@@ -10,6 +10,10 @@
 				@if( in-array( 'text', $allowed-colors ) ) {
 					.#{$color-name}-text, .#{$color-name}-500-text {
 						color: $color-value;
+
+						.material-icons {
+							color: $color-value;
+						}
 					}
 				}
 			} @else if $color-name == 'shades' {
@@ -20,6 +24,10 @@
 				@if( in-array( 'text', $allowed-colors ) ) {
 					.#{$color-type}-text {
 						color: $color-value;
+
+						.material-icons {
+							color: $color-value;
+						}
 					}
 				}
 			} @else if str_index( quote( $color-value ), 'a' ) {
@@ -31,6 +39,10 @@
 					@if( in-array( 'text', $allowed-colors ) ) {
 						.#{$color-name}-#{$color-type}-text {
 							color: $color-value;
+
+							.material-icons {
+								color: $color-value;
+							}
 						}
 					}
 				}
@@ -43,6 +55,10 @@
 					@if (in-array('text', $allowed-colors)) {
 						.#{$color-name}-#{$color-type}-text {
 							color: $color-value;
+
+							.material-icons {
+								color: $color-value;
+							}
 						}
 					}
 				}
