--- a/stylesheets/scss/components/_snackbars.scss
+++ b/stylesheets/scss/components/_snackbars.scss
@@ -4,17 +4,16 @@
  * http://www.google.com/design/spec/components/snackbars-toasts.html
  **************************************/
 
-$snackbar-action-margin: rem-calc(24px);
-
 .snackbar {
 	background: $snackbar-background;
 	bottom: 0;
 	color: $snackbar-font-color;
-	font-size: rem-calc(14px);
-	height: rem-calc(48px);
+	font-size: $snackbar-font-size;
+	min-height: $snackbar-min-height;
+	max-height: $snackbar-max-height;
 	left: 0;
 	overflow: hidden;
-	padding: rem-calc(14px) rem-calc(24px);
+	padding: $snackbar-padding;
 	position: fixed;
 	right: 0;
 
@@ -32,7 +31,7 @@ $snackbar-action-margin: rem-calc(24px);
 		float: right;
 		font-weight: 500;
 		margin: 0 0 0 $snackbar-action-margin;
-		text-transform: capitalize;
+		text-transform: uppercase;
 
 		@if( $amp == false ) {
 			@media #{$large-up} {
