--- a/stylesheets/scss/components/_data-tables.scss
+++ b/stylesheets/scss/components/_data-tables.scss
@@ -4,17 +4,11 @@
  * http://www.google.com/design/spec/components/data-tables.html
  **************************************/
 
-$table-header-size: rem-calc(56px);
-$table-content-size: rem-calc(48px);
-$table-column-padding: rem-calc(56px);
-$table-first-column-padding: rem-calc(24px);
-$table-checkbox-size: rem-calc(18px);
-
 table {
 	border-collapse: collapse;
 	white-space: nowrap;
-	overflow: auto;
-	display: block;
+	display: table;
+	width: 100%;
 
 	.numeric-col {
 		text-align: right;
@@ -39,56 +33,11 @@ table {
 			}
 		}
 	}
-
-	&.table-responsive {
-		@media #{$medium-down} {
-			width: 100%;
-			border-collapse: collapse;
-			border-spacing: 0;
-			display: block;
-			position: relative;
-
-			thead {
-				display: block;
-				float: left;
-
-				tr {
-					display: block;
-				}
-
-				th {
-					display: block;
-					text-align: right;
-					vertical-align: top;
-				}
-			}
-
-			tbody {
-				display: block;
-				width: auto;
-				position: relative;
-				overflow-x: auto;
-				white-space: nowrap;
-
-				tr {
-					display: inline-block;
-					vertical-align: top;
-				}
-
-				td {
-					display: block;
-					text-align: left;
-					vertical-align: top;
-					min-height: $table-header-size;
-				}
-			}
-		}
-	}
 }
 
 thead th {
-	color: if( $theme == light, rgba($black, .54), rgba($white, .54));
-	font-size: rem-calc(12px);
+	color: $table-header-font-color;
+	font-size: $table-header-font-size;
 	font-weight: 500;
 	height: $table-header-size;
 	line-height: $table-header-size;
@@ -98,10 +47,10 @@ thead th {
 	}
 
 	a, .sorted {
-		color: if( $theme == light, rgba($black, .54), rgba($white, .54));
+		color: $table-header-font-color;
 
 		.material-icons {
-			color: if( $theme == light, rgba($black, .54), rgba($white, .54));
+			color: $table-header-font-color;
 		}
 
 		&:hover {
@@ -115,8 +64,8 @@ thead th {
 }
 
 td {
-	color: if( $theme == light, rgba($black, .87), rgba($white, .87));
-	font-size: rem-calc(13px);
+	color: $table-content-font-color;
+	font-size: $table-content-font-size;
 	font-weight: 400;
 	height: $table-content-size;
 	line-height: $table-content-size;
@@ -134,4 +83,8 @@ td, th {
 	&:last-of-type {
 		padding-right: $table-first-column-padding;
 	}
+}
+
+.table-responsive {
+	overflow-x: scroll;
 }
