--- a/stylesheets/scss/components/_lists.scss
+++ b/stylesheets/scss/components/_lists.scss
@@ -9,20 +9,16 @@ ol, ul {
 	margin: 0;
 	padding: 0;
 
-	li {
-		color: if( $theme == light, rgba($black, .87), rgba($white, .87));
-		font-size: rem-calc(14px);
+	li, a {
+		color: $list-font-color;
+		font-size: $list-font-size;
 		font-weight: 400;
 		height: auto;
-		line-height: rem-calc(48px);
-		padding: 0 rem-calc(16px);
+		line-height: $list-item-height;
+		padding: $list-item-padding;
 	}
 
 	a {
-		color: if( $theme == light, rgba($black, .87), rgba($white, .87));
-		font-size: rem-calc(14px);
-		font-weight: 400;
-		height: rem-calc(48px);
-		line-height: rem-calc(48px);
+		height: $list-item-height;
 	}
 }
